--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Scan Result</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='result-style.css') }}">
+        <link rel="stylesheet" href="../static/result-style.css">
     </head>
     
     <body>
